# cpathjoin

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  README.md  clib.json  cpj.pc.in  meson.build
.github/workflows/: build-macos.yml
cmake/: CpjConfig.cmake  EnableWarnings.cmake
docs/: build.md  embed.md  index.md
docs/_layouts/: default.html
docs/reference/: cpj_path_change_basename.md  cpj_path_change_extension.md  cpj_path_change_root.md  cpj_path_change_segment.md  cpj_path_get_absolute.md  cpj_path_get_basename.md  cpj_path_get_dirname.md  cpj_path_get_extension.md  cpj_path_get_first_segment.md  cpj_path_get_intersection.md  cpj_path_get_last_segment.md  cpj_path_get_next_segment.md  cpj_path_get_previous_segment.md  cpj_path_get_relative.md  cpj_path_get_root.md  cpj_path_get_segment_type.md  cpj_path_get_style.md  cpj_path_guess_style.md  cpj_path_has_extension.md  cpj_path_is_absolute.md  cpj_path_is_relative.md  cpj_path_join.md  cpj_path_join_multiple.md  cpj_path_normalize.md  cpj_path_set_style.md  cwk_path_change_basename.md  cwk_path_change_extension.md  cwk_path_change_root.md  cwk_path_change_segment.md  cwk_path_get_absolute.md  cwk_path_get_basename.md  cwk_path_get_dirname.md  cwk_path_get_extension.md  cwk_path_get_last_segment.md  (+17 more)
include/: cpj.h
src/: cpj.c  cwalk.c
test/: absolute_test.c  basename_test.c  cpj_test.h  dirname_test.c  extension_test.c  guess_test.c  intersection_test.c  is_absolute_test.c  is_relative_test.c  join_test.c  main.c  meson.build  normalize_test.c  relative_test.c  root_test.c  segment_test.c  windows_test.c
